@@ -1,4 +1,4 @@
-$Id: History,v 1.20 2002-09-02 15:22:52 dressel Exp $
+$Id: History,v 1.21 2002-10-10 13:17:58 dressel Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Oct, 10th 2002 M.Dressel geombias-V04-01-01-internal-5
+     change in G4(V)ImportanceAlgorithm, G4ImportanceSplitExaminer
+     G4ImportanceFinder: give pre and post importance 
+     separatly insted only ipre/ipost.
 
 Sep, 2th 2002 M.Dressel geombias-V04-01-01-internal-4
      moved files concerning messaging a importance geometry to
